--- a/_config.yml
+++ b/_config.yml
@@ -17,10 +17,8 @@ author:
   name:           'NyxAI'
   url:            https://twitter.com/nyxai_lab
 
-paginate:         5
-
 # Custom vars
 version:          2.1.0
 
 github:
-  repo:           https://github.com/poole/hyde
+  repo:           https://github.com/nyx-ai/nyx-ai.github.io
