--- a/_config.yml
+++ b/_config.yml
@@ -5,16 +5,13 @@ highlighter:      pygments
 # Setup
 title:            NyxAI
 tagline:          'State of the art AI tooling for image generation'
-description:      'Description description description'
+description:      'State of the art AI tooling for image generation'
 url:              https://nyxai.co/
 baseurl:          /
 
 author:
   name:           'NyxAI'
   url:            https://twitter.com/nyxai_lab
-
-# Custom vars
-version:          2.1.0
 
 github:
   repo:           https://github.com/nyx-ai/nyx-ai.github.io
